# kmds-data-helper

./: .gitignore  README.md  api.py  audit_report.html  audit_report.md  demo_aggregator.py  kb_aggregator.py  kmds_config.yaml  main.py  out.txt  project_knowledge_graph.xml  pyproject.toml  regression_test.py  report_generator.py  test_api.py  test_engine_cli.py  test_kmds.py
data/: q2_2016_ticket_resolution_data.csv
docs/: conf.py
docs/source/: TRACE_FLOW.md  build_instructions.md  conf.py  index.rst  personas.rst  personas_content.md  trace_flow.rst
gemini/: arch.md  development_summary.md  feature.md  requirements_doc_imp_feat.md  stash.md
notebooks/: example_analytics_data_rep_1.ipynb  example_analytics_data_rep_model_selection2.ipynb  example_analytics_eda_phase.ipynb  example_analytics_ingest_summarize_parity.ipynb  example_analytics_model_selection_1.ipynb  example_analytics_observations_report.ipynb  example_ml_data_rep_phase.ipynb  example_ml_eda_phase.ipynb  example_ml_modelling_phase_mc.ipynb  example_ml_modelling_phase_ms.ipynb  example_ml_observations_report.ipynb  example_narrative.md  retail_stratification_of_data.ipynb
output/: full_service_report.json  kmds_strategic_summary.json  kmds_summary.json
personas/: architect.yaml  modeling_ds.yaml  scientist.yaml  strategic_lead.yaml  tech_lead.yaml
src/: config_manager.py
src/kmds_data_dictionary_helper/: engine.py  main.py
src/kmds_data_dictionary_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kmds_data_helper/: __init__.py  aggregator.py  cli.py  config_manager.py  data_processor.py  engine.py  helper_output_adapter.py  kb_aggregator.py  kmds_check.py  llm_client.py  main.py  pre_req_check.py  processing.py  service.py  utils.py
src/kmds_data_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api.py  test_engine_cli.py  test_gatekeeper.py  test_personas.py
