[project]
name = "kmds-data-helper"
version = "0.1.0"
description = "AI-powered data dictionary generator for KMDS"
requires-python = ">=3.12"
dependencies = [
    "pymupdf4llm>=0.0.12",
    "ollama>=0.1.0",
    "pandas>=2.0.0",
    "dataprofiler[reports]<=0.13.4", # Lowered to match the actual latest release
    "setuptools<70.0.0",
    "urllib3<2.0.0",
    "rich>=13.0.0",
    "nbformat>=5.10.4",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "requests>=2.32.5",
    "pytest>=9.0.3",
    "pypdf>=6.11.0",
]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "requests"
]
[project.scripts]
kmds-check = "kmds_data_helper.pre_flight:validate_environment"
kmds-test = "pytest:main"

[tool.pytest.ini_options]
# Ensures pytest only runs the new persona tests and stays away from broken legacy files
testpaths = ["tests/test_personas.py"]
python_files = "test_*.py"

# -n 3: Runs 3 parallel workers
# -v: Verbose output
# --disable-warnings: Hides those annoying urllib3 version mismatch logs
addopts = "-n 3 -v --disable-warnings"

filterwarnings = [
    "ignore:urllib3.*match a supported version:requests.RequestsDependencyWarning",
]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]
